[Discuss] Fix answer text overflow

--- a/SoloLearn/src/containers/Discuss/Post/styles.scss
+++ b/SoloLearn/src/containers/Discuss/Post/styles.scss
@@ -75,7 +75,7 @@
 				display: flex;
 				flex-direction: column;
 				align-items: flex-start;
-				word-break: normal;
+				word-break: break-word;
 				.title, .tags, .message, .preview {
 					margin: $secondary_gap_size 0 0 0;
 				}
